k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: devops
  labels:
    app: app
    auther: Tawfeeq
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: myapp
          image: tawfeeq421/devsecops:2
          ports:
            - name: app-port
              containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 240Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
