k8s/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: devops
  labels:
    auther: Tawfeeq
spec:
  type: ClusterIP
  ports:
    - targetPort: app-port
      port: 80
      protocol: TCP
  selector:
    app: my-app
